chore(ci): use static e2e dataset in e2e pipeline
relates to #OPT-2843